url: https://testing.agencyhandy.com/
---
- evalScript: ${output.addonName = "Add-On" + Date.now()}
- launchApp:
    clearState: true

- runFlow:
    when:
      visible: "Sign In"
    file: Login.yaml
- tapOn:
    id: service-sidebar-item-toggle
- tapOn: Add-ons
- tapOn: Create Add-ons
- tapOn:
    id: add-on-name-input
    index: 1
- inputText: ${output.addonName}
- doubleTapOn:
    point: 31%,66%

- inputText: "Test add-on"
- swipe:
    start: 80%,70%
    end: 80%,30%
- swipe:
    start: 80%,70%
    end: 80%,30%
- tapOn:
    id: add-on-pricing-select
    index: 1
- tapOn: Subscription
- tapOn:
    id: billingCycleCount
- inputText: "2"
- swipe:
    start: 80%,70%
    end: 80%,30%
- tapOn:
    id: add-on-price-input
    index: 1
- inputText: "0"
- tapOn:
    id: Open
- tapOn: "US Dollar ($)"
- tapOn: Create
#  VERIFY CREATED DATA EXISTS
- assertVisible: ${output.addonName}
