url: https://testing.agencyhandy.com/
---
# last random name
- evalScript: ${output.rand = String(Date.now()%100).padStart(2,'0')}
- evalScript: ${output.Catname = "Category" + output.rand}
- launchApp:
    clearState: true
- runFlow:
    when:
      visible: "Sign In"
    file: Login.yaml
- tapOn: Clients
- tapOn: Configuration
#create catagory
- tapOn:
    id: create-client-category
- tapOn:
    id: name
    index: 1
- inputText: ${output.Catname}
- tapOn:
    id: client-category-color-option-3
- tapOn:
    id: submit
- assertVisible: ${output.Catname}
#3 dot action missing id

#Update
- tapOn:
    id: client-category-action-menu-0
- tapOn:
    id: edit-client-category
- tapOn:
    id: description
    index: 2
- inputText: "Category description"
- tapOn:
    id: client-category-color-option-2
- tapOn:
    id: submit
#delete
- tapOn:
    id: client-category-action-menu-0
- tapOn:
    id: delete-client-category
- tapOn: Yes, Delete it
