url: https://testing.agencyhandy.com/
---
#coupon name
- evalScript: ${output.rand = String(Date.now()%100).padStart(2,'0')}
- evalScript: ${output.coupon = "coupon forever" + output.rand}
#coupon code
- evalScript: ${output.rand = String(Date.now()%100).padStart(2,'0')}
- evalScript: ${output.code = "coupon" + output.rand}

- launchApp:
    clearState: true

- runFlow:
    when:
      visible: "Sign In"
    file: Login.yaml
- tapOn:
    id: service-sidebar-item-toggle

- tapOn: Coupons
- tapOn: Create Coupon
- tapOn: Enter Coupon Name
- inputText: ${output.coupon}
- tapOn: Add Services
- tapOn:
    id: service-id-0
- tapOn:
    id: coupon-service-list-add-button
- swipe:
    start: 80%,70%
    end: 80%,30%
- tapOn:
    id: coupon-discount-amount-input
- inputText: "10"
- swipe:
    start: 80%,70%
    end: 80%,30%
- swipe:
    start: 80%,70%
    end: 80%,30%

- tapOn:
    id: ":r1q:"
- inputText: ${output.code}
- swipe:
    start: 80%,70%
    end: 80%,30%
- swipe:
    start: 80%,70%
    end: 80%,30%
- tapOn:
    id: coupon-create-button
- assertVisible: ${output.coupon}
# Horizontal
- swipe:
    start: 80%,50%
    end: 20%,50%
- tapOn:
    id: actions
    index: 1
- tapOn: Delete
- tapOn: Yes, Delete it
