url: https://testing.agencyhandy.com/
---
# last random name
- evalScript: ${output.rand = String(Date.now()%100).padStart(3,'0')}
- evalScript: ${output.LeadName = "new" + output.rand}
# random mail
- evalScript: ${output.oneDigit = String(Date.now()%100).padStart(2,'0')}
- evalScript: ${output.randomEmail = "suchi.agencyhandy+" + output.oneDigit + "@gmail.com"}
# random phone no
- evalScript: ${output.elevenDigit = String(Date.now()%100).padStart(8,'0')}
- evalScript: ${output.phone = "+88017" + output.elevenDigit}
# random company name
- evalScript: ${output.rand = String(Date.now()%100).padStart(2,'0')}
- evalScript: ${output.compnayName = "Company" + output.rand}
- launchApp:
    clearState: true
- runFlow:
    when:
      visible: "Sign In"
    file: Login.yaml
- tapOn: Leads
- tapOn: Create Lead
- tapOn: Enter First Name
- inputText: Lead
- tapOn: Enter Last Name
- inputText: ${output.LeadName}
- tapOn:
    id: client-email
    index: 1
- inputText: ${output.randomEmail}
- tapOn:
    id: contactNo
    index: 1
- inputText: ${output.phone}
- swipe:
    start: 80%,70%
    end: 80%,30%
- tapOn:
    id: website
    index: 1
- inputText: "https://www.nasa.gov/"
- tapOn:
    id: companyName
    index: 1
- inputText: ${output.compnayName}
- swipe:
    start: 80%,70%
    end: 80%,30%
- tapOn:
    id: client-category
    index: 1
- tapOn:
    id: client-category-option-2
# - tapOn:
#     id: status
#     index: 1
# - tapOn:
#     id: Proposal Sent
- swipe:
    start: 80%,70%
    end: 80%,30%
- tapOn:
    id: source
    index: 1
- inputText: "Unknown"
- tapOn: 20,000$
- inputText: "500"
- swipe:
    start: 80%,70%
    end: 80%,30%
- tapOn: Select
- tapOn: "1"
- tapOn: OK
- tapOn:
    id: Open
- tapOn:
    id: agent-option-1
- swipe:
    start: 80%,70%
    end: 80%,30%
- swipe:
    start: 80%,70%
    end: 80%,30%
- tapOn: "Select Country"
- inputText: "Bangladesh"
- tapOn:
    text: "Bangladesh"
    index:
      1
      # State
- tapOn: "State"
- inputText:
    "Dhaka"

    # City
- tapOn:
    id: client-city
    index: 1
- inputText: "Uttara"

#       # Zip
- tapOn:
    id: client-zipCode
    index: 1
- inputText: "1230"
- swipe:
    start: 80%,70%
    end: 80%,30%
#       # Street address
- tapOn: "Add Street Address"
- inputText: "House 12, Road 5, Uttara"
- swipe:
    start: 80%,70%
    end: 80%,30%
- tapOn:
    id: client-submit-button

#view no id
- tapOn:
    point: 20%,49%
#update
- tapOn: First Name
- swipe:
    start: 80%,80%
    end: 80%,20%
- tapOn:
    text: New
    index: 1
- tapOn:
    id: Open
- tapOn:
    id: lead-status-option-0

    #lacking of Id send email full function pause
# - tapOn: Send Email

#Lead View Modal close due to id issue

#convirt to client
- tapOn: Convert to Client
- tapOn:
    id: client-submit-button
