url: https://testing.agencyhandy.com/
---
- launchApp
- launchApp:
    clearState: true

- runFlow:
    when:
      visible: "Sign In"
    file: Login.yaml
- tapOn: "Services"
- tapOn:
    id: CREATE_NEW_SERVICE
    index: 1
- tapOn: Service Details
- doubleTapOn:
    id: "service-name"
- inputText: "Service-${Date.now()}"

# - tapOn: Click to upload
# - inputText:
#     text: "assets/test-image.jpg"
- scrollUntilVisible:
    element:
      text: "Service Description*"
- doubleTapOn:
    point: 33%,61%
- inputText: "test"
#Tax
- swipe:
    from:
      text: + Tax Rates
    direction: UP
- tapOn:
    id: Open
- tapOn: "Home"
#Exclusive vat
- tapOn: inclusive
#currency
- tapOn:
    id: Open
    index: 1
- tapOn: "US Dollar ($)"

#package create
- scrollUntilVisible:
    element:
      text: "Package Details *"
- tapOn: + New Package
- tapOn:
    id: "packageName"
- inputText: "Basic"
- swipe:
    start: 80%,70%
    end: 80%,30%

- tapOn: + Add
- inputText: "new included"
- swipe:
    start: 80%,70%
    end: 80%,30%
# - scrollUntilVisible:
#     element:
#       text: "Amount"
- tapOn: "0"
- inputText: "100"
- tapOn: Save

#Portfolio
- tapOn: Additional Information
- tapOn:
    id: Open
- tapOn: "Padma Bridge"

- swipe:
    start: 80%,70%
    end: 80%,30%
- tapOn:
    text: Create Service
    index: 1
- scrollUntilVisible:
    element:
      text: "Skip"
- tapOn: Skip

#edit service

- tapOn: Edit
- tapOn: Package Details
- tapOn: Basic
- swipe:
    start: 80%,70%
    end: 80%,30%
- swipe:
    start: 80%,70%
    end: 80%,30%

- swipe:
    start: 80%,70%
    end: 80%,30%

- tapOn:
    id: toggle-defaultTask
- tapOn:
    id: task-name-input
    index: 1
- inputText: "Task One"

- doubleTapOn:
    id: submit
    delay: 100
- swipe:
    start: 80%,70%
    end: 80%,30%
- doubleTapOn: Save
- swipe:
    start: 80%,70%
    end: 90%,50%
  
# - swipe:
#     from:
#       id: package-save
#     direction: UP
# - swipe:
#     start: 80%,70%
#     end: 80%,30%
- doubleTapOn:
    id: submit
    delay: 100
- doubleTapOn:
    id: intercom-messenger-frame
    delay: 100
- tapOn:
    text: Services
    index: 1